[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wuddz-pscan"
version = "1.0.0"
description = "Asynchronously Scan A Host(s)/Network(s)/IPRange(s) For Open TCP Ports."
readme = "README.md"
authors = [
  { name="Wuddz-Devs", email="wuddz_devs@protonmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
keywords = ["scanner", "scan", "ports", "hosts", "ip", "tcp"]
classifiers = [
		'License :: OSI Approved :: MIT License',
		'Programming Language :: Python',
		'Programming Language :: Python :: 3.7',
		'Programming Language :: Python :: 3.8',
		'Programming Language :: Python :: 3.9',
		'Programming Language :: Python :: 3.10',
]

[project.scripts]
wudz-pscan = "wudz_pscan:cli_main"

[project.urls]
"Homepage" = "https://github.com/wuddz-devs/wuddz-port-scanner"
